feat: complete user operations
