# authentication-service/data/models.go
@@ -1,7 +1,13 @@
 package data
 
 import (
+	"authServiceApp/proto/authpb"
 	"database/sql"
+	"time"
+)
+
+const (
+	newUserRole = "CITIZEN"
 )
 
 func NewRepository(conn *sql.DB) Repository {
@@ -14,4 +20,37 @@ func NewRepository(conn *sql.DB) Repository {
 
 type AuthModel struct {
 	Repo Repository
+}
+
+type User struct {
+	ID           *string    `json:"id,omitempty"`
+	Username     *string    `json:"username,omitempty"`
+	Password     *string    `json:"password,omitempty"`
+	PasswordHash *string    `json:"password_hash,omitempty"`
+	Role         *string    `json:"role,omitempty"`
+	CreatedAt    *time.Time `json:"created_at,omitempty"`
+	UpdatedAt    *time.Time `json:"updated_at,omitempty"`
+	LastLogin    *time.Time `json:"last_login,omitempty"`
+	LastActive   *time.Time `json:"last_active,omitempty"`
+}
+
+func NewUserFromRequest(req *authpb.NewUserRequest) *User {
+	role := newUserRole
+	return &User{
+		Username: &req.Username,
+		Password: &req.Password,
+		Role:     &role,
+	}
+}
+
+type UserLoginCredentials struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+func CredentialsFromRequest(req *authpb.UserLoginCredentials) *UserLoginCredentials {
+	return &UserLoginCredentials{
+		Username: req.Username,
+		Password: req.Password,
+	}
 }
